[package]
authors    = ['Manta Network']
name       = "pallet-tx-pause"
version    = '3.1.0'
edition    = "2021"
homepage   = 'https://manta.network'
license    = 'GPL-3.0'
repository = 'https://github.com/Manta-Network/Manta/'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.13", default-features = false, optional = true }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
manta-primitives = { path = '../../runtime/primitives', default-features = false }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
]

runtime-benchmarks = [
	"frame-benchmarking",
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
