[package]
authors = ["Manta Network"]
description = "parachain staking pallet for collator selection and reward distribution"
edition = "2021"
homepage = 'https://manta.network'
license = 'GPL-3.0'
name = "pallet-parachain-staking"
repository = 'https://github.com/Manta-Network/Manta/'
version = '4.6.0'

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
substrate-fixed = { workspace = true }

# Manta
manta-primitives = { workspace = true }
# TODO: remove after whitelist period
manta-collator-selection = { workspace = true }
pallet-session = { workspace = true }
sp-staking = { workspace = true }

[dev-dependencies]
similar-asserts = { workspace = true }

pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "manta-primitives/std",
  "manta-collator-selection/std",
  'pallet-session/std',
  "codec/std",
  "scale-info/std",
  "serde/std",
  "sp-arithmetic/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-staking/std",
  'substrate-fixed/std',
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
