[package]
authors.workspace = true
description = "parachain staking pallet for collator selection and reward distribution"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pallet-parachain-staking"
repository.workspace = true
version.workspace = true

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate
codec = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
substrate-fixed = { workspace = true }

# Manta
manta-primitives = { workspace = true }
# TODO: remove after whitelist period
manta-collator-selection = { workspace = true }
pallet-session = { workspace = true }
sp-staking = { workspace = true }

[dev-dependencies]
similar-asserts = { workspace = true }

pallet-balances = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "manta-primitives/std",
  "manta-collator-selection/std",
  'pallet-session/std',
  "codec/std",
  "scale-info/std",
  "serde/std",
  "sp-arithmetic/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-staking/std",
  'substrate-fixed/std',
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
