[package]
authors = ["Manta Network"]
description = "Provides on-chain randomness"
edition = "2021"
homepage = 'https://manta.network'
license = 'GPL-3.0'
name = 'pallet-randomness'
repository = 'https://github.com/Manta-Network/Manta/'
version = '4.4.0'

[dependencies]
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37", default-features = false }
hex = { version = "0.4.3", default-features = false }
log = { version = "0.4", default-features = false }
manta-primitives = { path = "../../primitives/manta", default-features = false }
nimbus-primitives = { git = "https://github.com/manta-network/nimbus.git", tag = "v4.0.8", default-features = false }
parity-scale-codec = { version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", default-features = false, optional = true }
session-key-primitives = { path = '../../primitives/session-keys', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37", default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37", default-features = false }

[dev-dependencies]
derive_more = "0.99"
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37", features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "hex/std",
  "nimbus-primitives/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "serde",
  "session-key-primitives/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
