[package]
authors = ["Manta Network"]
description = "Provides on-chain randomness"
edition = "2021"
homepage = 'https://manta.network'
license = 'GPL-3.0'
name = 'pallet-randomness'
repository = 'https://github.com/Manta-Network/Manta/'
version = '4.6.0'

[dependencies]
codec = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
manta-primitives = { workspace = true }
nimbus-primitives = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
session-key-primitives = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
derive_more = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "frame-support/std",
  "frame-system/std",
  "hex/std",
  "nimbus-primitives/std",
  "codec/std",
  "scale-info/std",
  "serde",
  "session-key-primitives/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "manta-primitives/std",
  "log/std",

]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
