[package]
authors.workspace = true
description = "Provides on-chain randomness"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = 'pallet-randomness'
repository.workspace = true
version.workspace = true

[dependencies]
codec = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
manta-primitives = { workspace = true }
nimbus-primitives = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
session-key-primitives = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
derive_more = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "frame-support/std",
  "frame-system/std",
  "hex/std",
  "nimbus-primitives/std",
  "codec/std",
  "scale-info/std",
  "serde",
  "session-key-primitives/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "manta-primitives/std",
  "log/std",

]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
