[package]
name = "pallet-staking"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1.0.126", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io ={ branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-staking = { branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-session = { branch = "polkadot-v0.9.10", default-features = false, features = ["historical"], git = "https://github.com/paritytech/substrate" }
pallet-authorship = { branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-application-crypto = { branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-election-provider-support = { branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate" }
log = { version = "0.4.14", default-features = false }
paste = "1.0"

# Optional imports for benchmarking
frame-benchmarking = { branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate", optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
sp-storage = { branch = "polkadot-v0.9.10", git = "https://github.com/paritytech/substrate" }
sp-tracing = { branch = "polkadot-v0.9.10", git = "https://github.com/paritytech/substrate" }
sp-core = { branch = "polkadot-v0.9.10", git = "https://github.com/paritytech/substrate" }
pallet-balances = { branch = "polkadot-v0.9.10", git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { branch = "polkadot-v0.9.10", git = "https://github.com/paritytech/substrate" }
pallet-staking-reward-curve = { branch = "polkadot-v0.9.10",  git = "https://github.com/paritytech/substrate" }
substrate-test-utils = { branch = "polkadot-v0.9.10", git = "https://github.com/paritytech/substrate" }
frame-benchmarking = { branch = "polkadot-v0.9.10", git = "https://github.com/paritytech/substrate" }
frame-election-provider-support = { branch = "polkadot-v0.9.10", features = ["runtime-benchmarks"], git = "https://github.com/paritytech/substrate" }
rand_chacha = { version = "0.2" }
parking_lot = "0.11.1"
hex = "0.4"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
    "sp-runtime/std",
    "sp-staking/std",
    "pallet-session/std",
    "frame-system/std",
    "pallet-authorship/std",
    "sp-application-crypto/std",
    "log/std",
    "frame-election-provider-support/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-election-provider-support/runtime-benchmarks",
    "rand_chacha",
]
try-runtime = ["frame-support/try-runtime"]

