[package]
authors = ['Manta Network']
edition = "2021"
homepage = 'https://manta.network'
license = 'GPL-3.0'
name = "pallet-tx-pause"
repository = 'https://github.com/Manta-Network/Manta/'
version = '4.0.7'

[dependencies]
codec = { package = "parity-scale-codec", version = '3.4.0', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37", default-features = false }

[dev-dependencies]
manta-primitives = { path = '../../primitives/manta' }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  'frame-support/runtime-benchmarks',
  'frame-system/runtime-benchmarks',
]
std = [
  "scale-info/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
