[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pallet-tx-pause"
repository.workspace = true
version.workspace = true

[dependencies]
codec = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
manta-primitives = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  'frame-support/runtime-benchmarks',
  'frame-system/runtime-benchmarks',
]
std = [
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
