[package]
authors = ['Manta Network']
edition = "2021"
homepage = 'https://manta.network'
license = 'GPL-3.0'
name = "calamari-vesting"
repository = 'https://github.com/Manta-Network/Manta/'
version = '4.5.0'

[dependencies]
codec = { package = "parity-scale-codec", version = '3.4.0', default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v1.0.0", optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v1.0.0" }
frame-system = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v1.0.0" }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v1.0.0", optional = true }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v1.0.0", optional = true }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v1.0.0" }
sp-std = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v1.0.0" }

[dev-dependencies]
chrono = "0.4"
manta-primitives = { path = "../../primitives/manta" }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v1.0.0" }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v1.0.0" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v1.0.0" }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
runtime-benchmarks = [
  'frame-benchmarking/runtime-benchmarks',
  'frame-support/runtime-benchmarks',
  'frame-system/runtime-benchmarks',
  'manta-primitives/runtime-benchmarks',
  'pallet-timestamp/runtime-benchmarks',
  'pallet-balances/runtime-benchmarks',
]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  'frame-support/try-runtime',
  'frame-system/try-runtime',
]
