[package]
authors = ['Manta Network']
edition = "2021"
homepage = 'https://manta.network'
license = 'GPL-3.0'
name = "calamari-vesting"
repository = 'https://github.com/Manta-Network/Manta/'
version = '4.6.0'

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true, optional = true }
pallet-timestamp = { workspace = true, optional = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
manta-primitives = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
  'frame-benchmarking/runtime-benchmarks',
  'frame-support/runtime-benchmarks',
  'frame-system/runtime-benchmarks',
  'pallet-timestamp/runtime-benchmarks',
  'pallet-balances/runtime-benchmarks',
]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  'frame-support/try-runtime',
  'frame-system/try-runtime',
]
