[package]
authors = ['Manta Network']
edition = "2021"
homepage = 'https://manta.network'
license = 'GPL-3.0'
name = "manta-primitives"
repository = 'https://github.com/Manta-Network/Manta/'
version = '4.6.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }
smallvec = { workspace = true }

# Substrate primitives
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }
orml-traits = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
  'frame-benchmarking/runtime-benchmarks',
  'frame-support/runtime-benchmarks',
  'frame-system/runtime-benchmarks',
  'xcm-builder/runtime-benchmarks',
]
std = [
  'codec/std',
  'scale-info/std',
  'sp-io/std',
  'sp-std/std',
  'log/std',
  'frame-support/std',
  'frame-system/std',
  'sp-core/std',
  'sp-runtime/std',
  'xcm-executor/std',
  'xcm-builder/std',
  'xcm/std',
  'orml-traits/std',
]
