[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "manta-primitives"
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }
smallvec = { workspace = true }

# Substrate primitives
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
orml-traits = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
  'frame-benchmarking/runtime-benchmarks',
  'frame-support/runtime-benchmarks',
  'frame-system/runtime-benchmarks',
  'xcm-builder/runtime-benchmarks',
]
std = [
  'codec/std',
  'scale-info/std',
  'sp-io/std',
  'sp-std/std',
  'log/std',
  'frame-support/std',
  'frame-system/std',
  'sp-core/std',
  'sp-runtime/std',
  'xcm-executor/std',
  'xcm-builder/std',
  'xcm/std',
  'orml-traits/std',
]
